Add API 19 - Update team info
