# src/validators/team.js
@@ -6,6 +6,12 @@ const createTeamSchema = joi.object({
   user_codes: joi.array().items(joi.string()).min(1),
 });
 
+const updateTeamSchema = joi.object({
+  email_to_contact: joi.string().email(),
+  name: joi.string(),
+});
+
 module.exports = {
   createTeamSchema,
+  updateTeamSchema,
 };
